# homebound

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  BUILD  Dockerfile  MODULE.bazel  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_lock.txt
blog/: BUILD  adapters.py  admin.py  bot.py  bot_retrieval.py  bot_throttle.py  embed_runner.py  embeddings.py  feeds.py  forms.py  models.py  sitemaps.py  stop_words.py  urls.py  views.py
django_config/: BUILD  context_processors.py  settings.py  urls.py  wsgi.py
docs/: AUTH_AND_EDITOR_DESIGN.md  DATA_EXTRACTION_DESIGN.md  DJANGO_BLOG_DESIGN.md  FACEBOOK_EXTRACTION_DESIGN.md  HIGH_LEVEL_DESIGN.md  STAGE_1_FOUNDATIONS.md  STAGE_2_LLM_FEATURES.md  TWITTER_WAYBACK_EXTRACTION_DESIGN.md
extractors/: BUILD  activity_log.py  base.py  facebook.py  facebook_api.py  google_plus.py  posts_io.py  twitter_log.py  wayback_twitter_log.py
proto/: BUILD  betterproto.bzl  comment.proto  location.proto  media_item.proto  post_record.proto  reaction.proto  reshared_from.proto
templates/: base.html
tests/: BUILD  conftest.py  django_setup.py  django_test.bzl  test_activity_log_dedup_stability.py  test_activity_log_extractor.py  test_blog_tags.py  test_bot.py  test_facebook_api_extractor.py  test_facebook_extractor.py  test_feeds.py  test_google_plus_extractor.py  test_import_posts.py  test_models.py  test_semantic_search.py  test_twitter_extractor.py  test_views.py  test_wayback_twitter_extractor.py
tools/: BUILD  exchange_fb_long_lived_token.py  fb_activity_log_comments_snippet.js  (+3 more)
(+131 files in other folders)
