# Bazel module: pin rules_python from the Bazel Central Registry.

module(
    name = "homebound",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    is_default = True,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "homebound_pip",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "homebound_pip")

# uv toolchain — Bazel downloads uv automatically; used by the lock() macro to
# regenerate requirements_lock.txt without needing pip-tools installed locally.
# Update lock: bazel run //:requirements.update
uv = use_extension(
    "@rules_python//python/uv:uv.bzl",
    "uv",
    dev_dependency = True,
)
uv.configure(version = "0.6.3")
